--- a/.landscape.yml
+++ b/.landscape.yml
@@ -1,3 +1,3 @@
 pylint:
     disable:
-        Use % formatting in logging functions and pass the % parameters as arguments
+        logging-format-interpolation
