--- a/SystemPrep/static/config.yaml
+++ b/SystemPrep/static/config.yaml
@@ -30,21 +30,25 @@ Linux:
     Salt:
         ScriptSource: https://systemprep.s3.amazonaws.com/ContentScripts/SystemPrep-LinuxSaltInstall.py
         Parameters:
-        entenv: False
-        formulastoinclude:
-            - https://salt-formulas.s3.amazonaws.com/systemprep-formula-master.zip
-            - https://salt-formulas.s3.amazonaws.com/ash-linux-formula-master.zip
-            - https://salt-formulas.s3.amazonaws.com/join-domain-formula-master.zip
-            - https://salt-formulas.s3.amazonaws.com/scc-formula-master.zip
-        formulaterminationstrings:
-            - -master
-            - -latest
-        salt_debug_log: /var/log/saltcall.debug.log
-        salt_results_log: /var/log/saltcall.results.log
-        saltcontentsource: https://systemprep-content.s3.amazonaws.com/linux/salt/salt-content.zip
-        saltinstallmethod: yum
-        saltstates: Highstate
-        sourceiss3bucket: true
+            entenv: False
+            formulastoinclude:
+                - https://salt-formulas.s3.amazonaws.com/systemprep-formula-master.zip
+                - https://salt-formulas.s3.amazonaws.com/ash-linux-formula-master.zip
+                - https://salt-formulas.s3.amazonaws.com/join-domain-formula-master.zip
+                - https://salt-formulas.s3.amazonaws.com/scc-formula-master.zip
+            formulaterminationstrings:
+                - -master
+                - -latest
+            salt_debug_log: /var/log/saltcall.debug.log
+            salt_results_log: /var/log/saltcall.results.log
+            saltcontentsource: https://systemprep-content.s3.amazonaws.com/linux/salt/salt-content.zip
+            saltinstallmethod: yum
+            saltstates: Highstate
+            sourceiss3bucket: False
+            saltbootstrapsource: None
+            saltgitrepo: None
+            saltversion: None
+            oupath: None
 
 Windows:
     Salt:
